# pylogging

./: .gitignore  README.md  pylogging.py  pyproject.toml  requirements.txt
src/pyloggingsetup/: __init__.py  pylogging.py
